--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,13 +9,19 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "from common import get_mnist\n",
     "\n",
     "rand = np.random.RandomState(42)\n",
     "\n",
     "def from_dummies(m=None):\n",
+    "    \"\"\"get the integer value of a one-hot encoded vector\"\"\"\n",
     "    res = pd.DataFrame(m, columns=range(10))\n",
-    "    return res.idxmax(axis=1)"
+    "    return res.idxmax(axis=1)\n",
+    "\n",
+    "def show_image(idx=0, dataset='train'):\n",
+    "\n",
+    "    plt.imshow(xtrain[idx].reshape(28, 28))\n",
+    "    plt.show()"
    ]
   },
   {
@@ -35,22 +41,13 @@
     }
    ],
    "source": [
-    "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)\n",
-    "\n",
-    "xtrain = mnist.train.images\n",
-    "ytrain = mnist.train.labels\n",
-    "\n",
-    "xtest = mnist.test.images\n",
-    "ytest = mnist.test.labels\n",
-    "\n",
-    "xval = mnist.validation.images\n",
-    "yval = mnist.validation.labels\n",
-    "\n",
-    "\n",
-    "def show_image(idx=0, dataset='train'):\n",
-    "\n",
-    "    plt.imshow(xtrain[idx].reshape(28, 28))\n",
-    "    plt.show()"
+    "mnist = get_mnist()\n",
+    "xtrain = mnist['x']['train']\n",
+    "xtest = mnist['x']['test']\n",
+    "xval = mnist['x']['val']\n",
+    "ytrain = mnist['y']['train']\n",
+    "ytest = mnist['y']['test']\n",
+    "yval = mnist['y']['val']"
    ]
   },
   {
